update lock colors

--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -1,1 +1,6 @@
 # BACKGROUND
+$color = rgba(10,14,20,1.0)
+$inner_color = rgba(10,14,20,0.8)
+$outer_color = rgba(92,207,230,1.0)
+$font_color = rgba(197,209,235,1.0)
+$check_color = rgba(115,208,255,1.0)
